# Bakalaura_darbs

bugbot-jira/: .gitignore  pyproject.toml  test.py
bugbot-jira/scripts/: list_vertex_models.py  test_gemini_response.py  test_gpt4o_vision.py  test_multimodal_models.py
bugbot-jira/src/bugbot/: __init__.py  config.py
bugbot-jira/src/bugbot/ingress/: api.py  logic.py  schemas.py  ui.py
bugbot-jira/src/bugbot/jira/: client.py
bugbot-jira/src/bugbot/llm/: selector.py
bugbot-jira/src/bugbot/postprocess/: validate.py
bugbot-jira/src/bugbot/preprocess/: __init__.py  text.py  vision.py
bugbot-jira/src/bugbot/prompt/: __init__.py  builder.py
bugbot-jira/src/bugbot/prompt/templates/: bug_report.j2
bugbot-jira/src/bugbot/templates/: base.html  ticket_cards.html  upload_form.html
bugbot-jira/src/tests/: test_ingress_report.py  test_llm_selector.py  test_text.py  test_vision.py
